--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@plugin "daisyui"{
+  themes: light --default, dark;
+}
+
 @plugin "daisyui/theme" {
   name: "light";
   default: true;
